--- a/style.css
+++ b/style.css
@@ -1,196 +1,97 @@
 * {
-  margin: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: sans-serif;
-  padding: 90px 20px 0;
-  background-color: #2c3e50;
-}
-
-.header {
-  background-color: #f04949;
-  height: 80px;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  left: 0;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-
-  max-width: 1920px;
-  margin: 0 auto;
-}
-
-.nav-link {
-  color: white;
-  text-decoration: none;
-}
-
-.logo {
-  font-size: 30px;
-  font-weight: bold;
-  padding: 0 40px;
-  line-height: 80px;
-}
-
-.nav-menu {
-  display: flex;
-  margin-right: 40px;
-  list-style: none;
-}
-
-.nav-menu-item {
-  font-size: 18px;
-  margin: 0 10px;
-  line-height: 80px;
-  text-transform: uppercase;
-  width: max-content;
-}
-
-.nav-menu-link {
-  padding: 8px 12px;
-  border-radius: 3px;
-}
-
-.nav-menu-link:hover,
-.nav-menu-link_active {
-  background-color: #203748;
-  transition: 0.5s;
-}
-
-/* TOGGLE */
-.nav-toggle {
-  color: white;
-  background: none;
-  border: none;
-  font-size: 30px;
-  padding: 0 20px;
-  line-height: 60px;
-  cursor: pointer;
-
-  display: none;
-}
-
-/* FOOTER */
-footer{
-  position:absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: #111;
-  height: auto;
-  width: 100%;
-  font-family: "Open Sans";
-  color: #fff;
-}
-.footer-content{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  text-align: center;
-}
-.footer-left{
-  background: #000;
-  width: 100vw;
-  padding: 15px 0;
-  text-align: center;
-}
-.footer-left h3{
-  font-size: 25px;
-  font-weight: 400px;
-  text-transform: capitalize;
-  line-height: 20px;
-}
-.footer-left p{
-  font-size: 14px;
-  max-width: 400px;
-  margin: 10px auto;
-  line-height: 20px;
-}
-.footer-right {
-  background: #000;
-  width: 100vw;
-  padding: 15px 0;
-  text-align: center;
-}
-.footer-right a{
-  font-size: 14px;
-  max-width: 400px;
-  margin: 10px auto;
-  line-height: 20px;
-  color: white;
-  text-decoration: none;
-}
-.footer-right p{
-  font-size: 14px;
-  max-width: 400px;
-  margin: 10px auto;
-  line-height: 20px;
-}
-.footer-right span{
-  text-transform: uppercase;
-  opacity: .4;
-  font-weight: 200;
-}
-
-/* MOBILE */
-@media (max-width: 768px) {
-  body {
-    padding-top: 70px;
-  }
-
-  .header {
-    height: 60px;
-  }
-
-  .logo {
-    font-size: 25px;
-    padding: 0 20px;
-    line-height: 60px;
-  }
-
-  .nav-menu {
-    flex-direction: column;
-    align-items: center;
+    box-sizing: border-box;
     margin: 0;
-    background-color: #2c3e50;
-    position: fixed;
-    top: 60px;
+    padding: 0;
+}
+html {
+    font-size: 62.5%;
+}
+body {
+    font-family: "Open Sans", sans-serif;
+    font-size: 1.6rem;
+}
+.header {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    border: 1px solid #ffab00;
+    align-items: center;
+    background: #ffab00;
+}
+.logo {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+.logo strong {
+    margin-left: 5px;
+    font-size: 3rem;
+}
+.menu {
+    display: flex;
+    list-style: none;
+}
+.menu li {
+    margin: 0 5px;
+}
+.menu li a {
+    font-weight: 700;
+    text-decoration: none;
+}
+.content {
     width: 100%;
-    padding: 20px 0;
-
-    height: calc(100% - 60px);
-    overflow-y: auto;
-
-    left: 100%;
-    transition: left 0.3s;
-  }
-
-  .nav-menu-item {
-    line-height: 70px;
-  }
-
-  .nav-menu-link:hover,
-  .nav-menu-link_active {
-    background: none;
-    color: #83c5f7;
-  }
-
-  .nav-toggle {
-    display: block;
-  }
-
-  .nav-menu_visible {
-    left: 0;
-  }
-
-  .nav-toggle:focus:not(:focus-visible) {
-    outline: none;
-  }
+    padding: 20px 10px;
+    border: 1px solid #ffab00;
+    text-align: center;
+}
+.control-bar {
+    padding: 20px 10px;
+    border: 1px solid #ffab00;
+}
+.control-bar h2 {
+    margin-bottom: 15px;
+    font-size: 1.8rem;
+    text-align: center;
+}
+.tg {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+.tg td {
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    overflow: hidden;
+    padding: 10px 5px;
+    word-break: normal;
+}
+.tg th {
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    font-weight: normal;
+    overflow: hidden;
+    padding: 10px 5px;
+    word-break: normal;
+}
+.tg .tg-baqh {
+    text-align: center;
+    vertical-align: top
+}
+.tg .tg-0lax {
+    text-align: left;
+    vertical-align: top
+}
+.footer {
+    display: flex;
+    height: 50px;
+    padding: 10px;
+    border: 1px solid #ffab00;
+    justify-content: center;
+    align-items: center;
+    background: #ffab00;
 }
